[refactor] 인플루언서 반환 형식 수정